#summary Changelog for all changes since the fork

= Changes =
== Version 0.6.7 ==
  * Fixed: https://code.google.com/p/ttrss-reader-fork/issues/detail?id=30 (Only one article when using old API)

== Version 0.6.6 ==
  * Fixed no articles beeing fetched if API doesn't support getArticles
  * Fixed problem with VirtualCategories not beeing displayed

== Version 0.6.5 ==
  * Fixed problem with attached images
  * Changed update-behaviour

== Version 0.6.4 ==
  * Added Changelog with button for the Donations-wikipage
  * Fixed some concurrent-access-issues with database
  * No more data on sdcard
  * Performance boost by removing in-memory-storage of articles
  * Reduced memory-footprint by reading from DB when needed, not in advance.
  * Minor fixes and major refactoring
  * Fixed fling-detection

== Version 0.6.3 ==
  * Refactored the settings-code
  * Refactored the JsonConnector and its interface
  * Rewrote DataController (now: Data) from scratch
  * Don't request Headlines and Content of Articles seperated, just fetching the full article now
  * Fixed: Fling in virtual category causing NPE
  * Fixed: getArticles is now working, even with with virtual categories
  * Using Sets instead of Lists in backend to avoid having to deal with duplicates. Refactored all occurrences.
  * Avoiding synchronisation-issues and parallel access in DBHelper
  * Better Fling-recognition

== Version 0.6.2 (Bugfix-release) ==
  * Fixed NPE in CategoryActivity
  * Added Update-Check in main-menu
  * Resolved Licensing issues

== Version 0.6.1 ==
  * Passwords are now allowed to contain special characters
  * Attached Audio/Video files can now be downloaded or directly played

== Version 0.6 ==
  * No more String-identifiers, everything migrated to int
  * Most DB-Querys are no raw-querys anymore
  * isOnline works but is not always handled correctly
  * We can now display attached Videos in the built-in mediaplayer
  * Minor bugs fixed

== Version 0.5.12 (Bugfix-release) ==