@@ -230,9 +230,7 @@ public class FeedHeadlineListAdapter extends BaseAdapter implements IRefreshable
         Log.i(Utils.TAG, "FeedHeadlineListAdapter - getArticles(feedId: " + mFeedId + ")");
         Set<ArticleItem> ret = Data.getInstance().getArticles(mFeedId);
 
-
         if (ret != null) {
-            Log.d(Utils.TAG, "DEBUG - getArticles(feedId: " + mFeedId + ") -> ListSize: " + ret.size());
             if (displayOnlyUnread) {
                 Set<ArticleItem> temp = new LinkedHashSet<ArticleItem>();
                 
